[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/waypoint_editor/WaypointEditorUI.gd" type="Script" id=1]

[sub_resource type="InputEventKey" id=1]
shift = true
pressed = true
scancode = 88

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
shift = true
pressed = true
scancode = 68

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
shift = true
pressed = true
scancode = 67

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="WaypointEditorUI" type="HBoxContainer"]
margin_right = 824.0
margin_bottom = 175.0
custom_constants/separation = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="c_status" type="VBoxContainer" parent="."]
margin_right = 180.0
margin_bottom = 175.0
rect_min_size = Vector2( 180, 0 )
custom_constants/separation = 8

[node name="_lb_status" type="Label" parent="c_status"]
margin_right = 180.0
margin_bottom = 14.0
text = "Status"

[node name="lb_waypoints" type="Label" parent="c_status"]
margin_top = 22.0
margin_right = 180.0
margin_bottom = 36.0
text = "0/0 waypoint(s) selected"
autowrap = true

[node name="lb_connections" type="Label" parent="c_status"]
margin_top = 44.0
margin_right = 180.0
margin_bottom = 58.0
text = "0 connection(s)"
autowrap = true

[node name="b_new" type="Button" parent="c_status"]
margin_top = 66.0
margin_right = 180.0
margin_bottom = 86.0
size_flags_horizontal = 3
disabled = true
text = "New"

[node name="_vsep" type="VSeparator" parent="."]
margin_left = 200.0
margin_right = 204.0
margin_bottom = 175.0
size_flags_vertical = 3

[node name="c_selection" type="VBoxContainer" parent="."]
margin_left = 224.0
margin_right = 404.0
margin_bottom = 175.0
rect_min_size = Vector2( 180, 0 )
custom_constants/separation = 8

[node name="_lb_selection" type="Label" parent="c_selection"]
margin_right = 180.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Selection"

[node name="b_remove" type="Button" parent="c_selection"]
margin_top = 28.0
margin_right = 180.0
margin_bottom = 48.0
size_flags_horizontal = 3
disabled = true
action_mode = 0
shortcut = SubResource( 2 )
text = "Remove [Shift + X]"

[node name="b_duplicate" type="Button" parent="c_selection"]
margin_top = 56.0
margin_right = 180.0
margin_bottom = 76.0
size_flags_horizontal = 3
disabled = true
action_mode = 0
shortcut = SubResource( 4 )
text = "Duplicate [Shift + D]"

[node name="b_connect" type="Button" parent="c_selection"]
margin_top = 84.0
margin_right = 180.0
margin_bottom = 104.0
size_flags_horizontal = 3
disabled = true
action_mode = 0
shortcut = SubResource( 6 )
text = "(Dis)connect  [Shift + C]"

[node name="_vsep_2" type="VSeparator" parent="."]
margin_left = 424.0
margin_right = 428.0
margin_bottom = 175.0
size_flags_vertical = 3

[node name="c_properties" type="VBoxContainer" parent="."]
margin_left = 448.0
margin_right = 824.0
margin_bottom = 175.0
rect_min_size = Vector2( 180, 0 )
custom_constants/separation = 8

[node name="_lb_properties" type="Label" parent="c_properties"]
margin_right = 376.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Properties"

[node name="hb" type="HBoxContainer" parent="c_properties"]
margin_top = 28.0
margin_right = 376.0
margin_bottom = 116.0
custom_constants/separation = 16

[node name="vb" type="VBoxContainer" parent="c_properties/hb"]
margin_right = 180.0
margin_bottom = 88.0
rect_min_size = Vector2( 180, 0 )
custom_constants/separation = 8

[node name="hb_group" type="HBoxContainer" parent="c_properties/hb/vb"]
margin_right = 180.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 12

[node name="_lb_group" type="Label" parent="c_properties/hb/vb/hb_group"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 19.0
text = "Group"

[node name="le_group" type="LineEdit" parent="c_properties/hb/vb/hb_group"]
margin_left = 51.0
margin_right = 180.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="hb_directional" type="HBoxContainer" parent="c_properties/hb/vb"]
margin_top = 32.0
margin_right = 180.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="_lb_directional" type="Label" parent="c_properties/hb/vb/hb_directional"]
margin_top = 5.0
margin_right = 152.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Directional"

[node name="cb_directional" type="CheckBox" parent="c_properties/hb/vb/hb_directional"]
margin_left = 156.0
margin_right = 180.0
margin_bottom = 24.0
disabled = true
pressed = true

[node name="hb_direction" type="HBoxContainer" parent="c_properties/hb/vb"]
margin_top = 64.0
margin_right = 180.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="_lb_direction" type="Label" parent="c_properties/hb/vb/hb_direction"]
margin_top = 5.0
margin_right = 88.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Direction"

[node name="sb_direction" type="SpinBox" parent="c_properties/hb/vb/hb_direction"]
margin_left = 92.0
margin_right = 180.0
margin_bottom = 24.0
size_flags_horizontal = 3
max_value = 315.0
step = 45.0
rounded = true
align = 1
editable = false

[node name="vb_2" type="VBoxContainer" parent="c_properties/hb"]
margin_left = 196.0
margin_right = 376.0
margin_bottom = 88.0
rect_min_size = Vector2( 180, 0 )
custom_constants/separation = 8
